--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -11,7 +11,7 @@
 \usepackage[explicit,compact]{titlesec}
 \usepackage{csquotes}
 \usepackage{amsthm}
-
+\usepackage{mathtools}
 
 \titlespacing\section{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
 \titlespacing\subsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
