Added latest version of report

--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -134,7 +134,7 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0.5pt}
 \fancyhf{}
-\rhead{\textit{\fontfamily{cmr}\selectfont Sondre Duna Lundemo}}
+\rhead{\textit{\fontfamily{cmr}\selectfont Cand. $10037$}}
 \lhead{\small \textsc{\rightmark}}
 \cfoot{\textemdash \, \thepage \, \textemdash}
 
@@ -144,7 +144,6 @@
 
 \fancypagestyle{titlepage}{
 	\fancyhf{}
-	\fancyfoot[C]{$\dagger$\href{mailto:sondre@duna.no}{\texttt{sondre@duna.no}}}
 	\fancyfootoffset{-4cm}
 	\renewcommand{\headrulewidth}{0pt}
 	\renewcommand\footrulewidth{0.5pt}
