--- a/tex/report_2.tex
+++ b/tex/report_2.tex
@@ -13,7 +13,7 @@
 
 	\vspace{4mm}
 	
-	\large{\textbf{Sondre Duna Lundemo}}$\dagger$
+	\large{\textbf{Candidate nr. $10037$}}
 	
 	\normalsize{Department of Physics, Norwegian University of Science and Technology, Trondheim Norway \\
 	TFY4235 - Computational physics
